2005-05-19  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c:
	If we can't open the device, pretend its an audio CD and let
	something else moan.  All of this code needs to be replaced.
	
2005-05-19  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Don't free the GError in the signal handler, this causes a crash
	(closes #126753).

2005-05-19  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Focus the list view.

2005-05-19  Ross Burton  <ross@burtonini.com>

	* configure.in: Depend on nautilus-burn 2.11.
	
	* src/sound-juicer.h:
	* src/sj-util.[ch]:
	* src/sj-main.c:
	* src/sj-extracting.c:
	Use NautilusBurnDrive instead of device paths.

2005-04-04  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Remove useless tests for entry->value->type which may crash if
	entry is NULL.

2005-04-04  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Initialise the audio profiles before creating an SjExtractor.

2005-04-04  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Use Stop instead of Cancel in the progress dialog.

2005-03-31  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-23  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added 'xh' to ALL_LINGUAS.

2005-03-08  Ahmad Riza H Nst  <ari@160c.afraid.org>

	* configure.in: Added id (Indonesian) to ALL_LINGUAS line.

2005-03-07  Mugurel Tudor  <mugurelu@go.ro>

	* configure.in: Added "ro" to ALL_LINGUAS

2005-03-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.10!

2005-03-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Make a label non-selectable (closes 169221)

2005-03-07  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Added a tip on creating a MP3 profile.

2005-03-07  Shaun McCance  <shaunm@gnome.org>

	* help/sound-juicer/C/sound-juicer.xml:
	* help/sound-juicer/C/figures/prefs.png:
	* help/sound-juicer/C/figures/startup.png: